<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ActivityTriangulo">

    <TextView
        android:id="@+id/textViewAyPTriangulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/AyP_Triangulo"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewTriangulo"
        android:layout_width="377dp"
        android:layout_height="287dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAyPTriangulo"
        app:srcCompat="@drawable/triangulo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="384dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTriangulo">

        <TextView
            android:id="@+id/textView_AyPTriangulo_ladoA"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/Lado_a_Triangulo"
            android:textColor="#FF5722"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInput_T_lado_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Lados_Triangulo"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="384dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView_AyPTriangulo_ladoB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lado_b_Triangulo"
            android:textColor="#FF5722"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInput_T_lado_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Lados_Triangulo"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="384dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView_AyPTriangulo_ladoC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lado_c_Triangulo"
            android:textColor="#FF5722"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInput_T_lado_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Lados_Triangulo"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonTriangulo_Calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Calcular_Triangulo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView_Triangulo_Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Resultado_Triangulo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTriangulo_Calcular" />

</androidx.constraintlayout.widget.ConstraintLayout>